add todo comments